server client UI added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LiveFeed</string>
+    <string name="permission_rationale">This App needs Camera and Wifi Permission to function properly.</string>
 </resources>
